--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <META NAME="Author" CONTENT="">
   <META NAME="Keywords" CONTENT=""="">>
   <META NAME="Description" CONTENT="">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
   <style>
   html, body {
   height: 100%;
@@ -355,14 +357,15 @@ var ParticlePool = (function() {
         width: 100%;
         color: rgb(225, 12, 182);
         height:100%;
-        font-size: 100px;
-        margin-left: -27px;
-        /* font-style: italic; */
+        font-size: 70px;
+        font-family:'Playfair Display', serif;
+        /* margin-left: -27px; */
+        font-style: italic;
         display: flex;
         align-items: center;
         margin-bottom: 5px;
         text-align: center;">
-        <div>❤️</div>
+        <div><h4> Mến </h4></div>
         
     </div>
     
